# phanix

./: .gitignore  Cargo.toml  README.md  SUPERVISOR_NOTES.md  rust-toolchain.toml
.cargo/: config.toml
kernel/src/: main.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  shell.rs  simple_executor.rs
supervisor/: context.md
supervisor/reviews/: 2026-02-27-initial-review.md
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
