[package]
name = "phanix"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release] 
panic = "abort"

[dependencies]
bootloader = "0.9.23"
volatile="0.2.6" # provides read_volatile & write_volatile functions that gurantees that read/writes are not optimized

# links our kernel to the dependency
[package.metadata.bootimage] 
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio"]

# tells bootimage to wait for the bootloader crate to be ready before trying to create the .bin file.
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
