[package]
name = "phanix"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release] 
panic = "abort"

[dependencies]
bootloader = "0.9.23"
volatile="=0.2.6" # Provides read_volatile & write_volatile functions that gurantees that read/writes are not optimized
spin = "0.5.2" # For interior Mutability
x86_64 = "0.14.2"
uart_16550 = "0.6.0"

# Links our kernel to the dependency
[package.metadata.bootimage] 
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio"]
# For exiting QEMU
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-display", "none"
    ]
test-timeout = 300
test-success-exit-code = 33

[dependencies.lazy_static] # For Global Interface
version = "1.0"
features = ["spin_no_std"]

# Testing
[[bin]]
name = "phanix"
test = true
bench = false

[[test]]
name = "should_panic"
harness = false