cargo-features = ["edition2024"]

[package]
name = "phanix"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "=0.2.6"
spin = "0.5.2"
x86_64 = "0.14.13"
uart_16550 = "0.6.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
conquer-once = { version = "0.4.0", default-features = false }
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }

[dependencies.crossbeam-queue]
version = "=0.3.8"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-display", "none"
]
test-timeout = 300
test-success-exit-code = 33

[[bin]]
name = "phanix"
test = true
bench = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false